<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="added_header">Added</string>
    <string name="addition_information">Additional information</string>
    <string name="advertisement_slug">Advertisement</string>
    <string name="agora_app_id">69c445aa26f64a53b3f3518aee6c244e</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="apollo_client_type">mobile</string>
    <string name="app_bar_back_button_accessibility">Back</string>
    <string name="app_key_athletic">2aaca7aae6104210ef340bad3f0dfca0a52eec07469507f0cde2f93cc4748d05</string>
    <string name="app_key_crossplay">0e52b576b32a3a1f904fb37c3a412967de6f016bbd3cd3ff9feea9c5283792a1</string>
    <string name="app_key_news_games_cooking">4ddc7c55449e05f2518961fcd5f219763a0160c4c04c6e443f9b864c10e2fb26</string>
    <string name="app_name">The Athletic</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="article_paywall_start_trial">Start Free Trial</string>
    <string name="article_share_button">Share</string>
    <string name="article_share_title">Share this article!</string>
    <string name="auth_options_signup_title">Create an Account</string>
    <string name="authentication_banner_text">All the stories at the heart of the game.</string>
    <string name="authentication_button_get_started">Start Reading</string>
    <string name="authentication_text_note">Already have an account?  Log in</string>
    <string name="authentication_text_spannable_log_in">Log in</string>
    <string name="author_feed_follow_message">You\'re now following this author</string>
    <string name="author_feed_unfollow_message">You\'re no longer following this author</string>
    <string name="autofill">Autofill</string>
    <string name="back_arrow">Back arrow</string>
    <string name="back_button_text">Close</string>
    <string name="back_description">Back Button</string>
    <string name="bluesky">Bluesky</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="box_score_away_team_game">@%1$s</string>
    <string name="box_score_baseball_batting">Batting</string>
    <string name="box_score_baseball_current_inning_batter_stats">%1$s-%2$s, %3$s</string>
    <string name="box_score_baseball_current_inning_next_batter">On Deck: %1$s %2$s</string>
    <string name="box_score_baseball_current_inning_pitcher_strikes">%1$sP - %2$sS</string>
    <string name="box_score_baseball_live_status_formatter">%1$d-%2$d, %3$d Out</string>
    <string name="box_score_baseball_live_status_strikeout_formatter">K, %1$d Out</string>
    <string name="box_score_baseball_live_status_walk_formatter">BB, %1$d Out</string>
    <string name="box_score_baseball_pitcher_lh">LHP</string>
    <string name="box_score_baseball_pitcher_lh_with_team">LHP, %1$s</string>
    <string name="box_score_baseball_pitcher_loss">Loss</string>
    <string name="box_score_baseball_pitcher_rh">RHP</string>
    <string name="box_score_baseball_pitcher_rh_with_team">RHP, %1$s</string>
    <string name="box_score_baseball_pitcher_save">Save</string>
    <string name="box_score_baseball_pitcher_win">Win</string>
    <string name="box_score_baseball_pitching">Pitching</string>
    <string name="box_score_baseball_play_title_bottom">Bot %1$s</string>
    <string name="box_score_baseball_play_title_bottom_long">Bottom %1$s</string>
    <string name="box_score_baseball_play_title_end">End %1$s</string>
    <string name="box_score_baseball_play_title_end_long">End %1$s</string>
    <string name="box_score_baseball_play_title_middle">Mid %1$s</string>
    <string name="box_score_baseball_play_title_middle_long">Middle %1$s</string>
    <string name="box_score_baseball_play_title_top">Top %1$s</string>
    <string name="box_score_baseball_play_title_top_long">Top %1$s</string>
    <string name="box_score_baseball_probable_pitchers">Probable</string>
    <string name="box_score_baseball_probable_pitchers_title">Probable Pitchers</string>
    <string name="box_score_baseball_score_table_errors_header">E</string>
    <string name="box_score_baseball_score_table_hits_header">H</string>
    <string name="box_score_baseball_score_table_runs_header">R</string>
    <string name="box_score_baseball_starting_pitchers_title">Starting Pitchers</string>
    <string name="box_score_baseball_stats_games">G</string>
    <string name="box_score_baseball_stats_win_loss">W-L</string>
    <string name="box_score_baseball_suspended_formatter">%1$s %2$d, %3$d-%4$d, %5$d Out</string>
    <string name="box_score_baseball_suspended_strikeout_formatter">%1$s %2$d, K, %3$d Out</string>
    <string name="box_score_baseball_suspended_walk_formatter">%1$s %2$d, BB, %3$d Out</string>
    <string name="box_score_current_inning_indicator_balls">Balls</string>
    <string name="box_score_current_inning_indicator_outs">Outs</string>
    <string name="box_score_current_inning_indicator_strikes">Strikes</string>
    <string name="box_score_down_and_distance_title">Down &amp; Distance</string>
    <string name="box_score_expected_goals_label">xG</string>
    <string name="box_score_first_period">Period 1</string>
    <string name="box_score_first_quarter">1st Quarter</string>
    <string name="box_score_forth_quarter">4th Quarter</string>
    <string name="box_score_game_details_location">%1$s, %2$s</string>
    <string name="box_score_game_details_location_label">Location</string>
    <string name="box_score_game_details_location_with_state">%1$s, %2$s, %3$s</string>
    <string name="box_score_game_details_network_label">Network</string>
    <string name="box_score_game_details_odds_label">Opening Odds</string>
    <string name="box_score_game_details_officials_label">Officials</string>
    <string name="box_score_game_details_opening_odds_even">Line: Even\nOver/Under: %1$s</string>
    <string name="box_score_game_details_opening_odds_line">Line: %1$s %2$s\nOver/Under: %3$s</string>
    <string name="box_score_game_details_opening_odds_no_line">Over/Under: %1$s</string>
    <string name="box_score_game_details_summary">%1$s @ %2$s</string>
    <string name="box_score_game_details_title">Game Details</string>
    <string name="box_score_game_details_weather_celsius">%1$s˚C %2$s</string>
    <string name="box_score_game_details_weather_fahrenheit">%1$s˚F %2$s</string>
    <string name="box_score_game_details_weather_label">Weather</string>
    <string name="box_score_game_ticketing_module_weather">%1$s˚ %2$s</string>
    <string name="box_score_game_ticketing_module_weather_outlook">%1$s</string>
    <string name="box_score_hockey_shootout_result_goal">Goal</string>
    <string name="box_score_hockey_shootout_result_save">Save</string>
    <string name="box_score_injury_comment_formatter">%1$s - %2$s</string>
    <string name="play_services_body">It looks like you are missing Google Services. In order to use The Athletic, you need Google Services installed on your device.</string>
    <string name="play_services_button">INSTALL NOW</string>
    <string name="play_services_title">Google Services Installation Required</string>
    <string name="podcast_delay_10_minutes">In 10 Minutes</string>
    <string name="podcast_delay_15_minutes">In 15 Minutes</string>
    <string name="podcast_delay_30_minutes">In 30 Minutes</string>
    <string name="podcast_delay_45_minutes">In 45 Minutes</string>
    <string name="podcast_delay_5_minutes">In 5 Minutes</string>
    <string name="podcast_delay_60_minutes">In One Hour</string>
    <string name="podcast_delay_episode_end">When Current Episode Ends</string>
    <string name="podcast_sleep_timer_title">Sleep Timer</string>
    <string name="podcast_sleep_timer_turn_off">Turn Timer Off</string>
    <string name="profile_daynight_dark">Dark</string>
    <string name="profile_daynight_light">Light</string>
    <string name="profile_daynight_system">System</string>
    <string name="purr_key_access_device_contacts">nyt.purr.access_device_contacts</string>
    <string name="purr_key_ads_V2">nyt.purr.ads_v2_ovr_key</string>
    <string name="purr_key_ads_V3">nyt.purr.ads_v3_ovr_key</string>
    <string name="purr_key_allow_invites_to_contacts">nyt.purr.allow_invites_to_contacts</string>
    <string name="purr_key_cali_notices">nyt.purr.cali_notices_ovr_key</string>
    <string name="purr_key_data_consent">nyt.purr.data_consent_ovr_key</string>
    <string name="purr_key_data_opt_v2">nyt.purr.out_v2_ovr_key</string>
    <string name="purr_key_data_pref">nyt.purr.data_pref_ovr_key</string>
    <string name="purr_key_email_marketing_opt_in">nyt.purr.email_marketing_opt_in_ovr_key</string>
    <string name="purr_key_first_party_targeting">nyt.purr.first_party_targeting_ovr_key</string>
    <string name="purr_key_limit_sensitive_pi">nyt.purr.limit_sensitive_pi_ui_ovr_key</string>
    <string name="purr_key_load_gpp">nyt.purr.load_gpp</string>
    <string name="purr_key_prefilled_text_with_link">nyt.purr.prefilled_text_with_link</string>
    <string name="purr_key_tcf_ui">nyt.purr.tcf_ui_ovr_key</string>
    <string name="purr_key_tos_blocker_card_ui_versioned">nyt/purr.tos_blocker_card_ui_versioned_ovr_key</string>
    <string name="purr_key_trackers_V2">nyt.purr.trkr_v2_ovr_key</string>
    <string name="search_bar_cancel">Cancel</string>
    <string name="search_bar_hint">Search</string>
    <string name="search_tab_articles">Articles</string>
    <string name="search_tab_authors">Authors</string>
    <string name="search_tab_leagues">Leagues</string>
    <string name="search_tab_teams">Teams</string>
</resources>