<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="Purr Overridden directives"
    android:key="legal_purr_overrides">
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrAdvertisingConfigurationDirectiveV2"
        app:purrKey="@string/purr_key_ads_V2"
        app:purrLabel="Ad Configuration V2"/>
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrAdvertisingConfigurationDirectiveV3"
        app:purrKey="@string/purr_key_ads_V3"
        app:purrLabel="Ad Configuration V3"/>
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrAcceptableTrackersDirectiveV2"
        app:purrKey="@string/purr_key_trackers_V2"
        app:purrLabel="Acceptable Trackers V2"/>
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrDataSaleOptOutDirectiveV2"
        app:purrKey="@string/purr_key_data_opt_v2"
        app:purrLabel="Show Data Sale Opt Out V2 UI"/>
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrShowDataProcessingConsentDirective"
        app:purrKey="@string/purr_key_data_consent"
        app:purrLabel="Show Data Processing Consent UI"/>
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrShowDataProcessingPreferenceDirective"
        app:purrKey="@string/purr_key_data_pref"
        app:purrLabel="Show Data Processing Preference"/>
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrShowCaliforniaNoticesUiDirective"
        app:purrKey="@string/purr_key_cali_notices"
        app:purrLabel="Show California Notices"/>
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrEmailMarketingOptInUiDirective"
        app:purrKey="@string/purr_key_email_marketing_opt_in"
        app:purrLabel="Email Marketing Opt In V2"/>
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrShowLimitSensitivePIUiDirective"
        app:purrKey="@string/purr_key_limit_sensitive_pi"
        app:purrLabel="Show Limit Sensitive PI UI"/>
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrTCFUIDirective"
        app:purrKey="@string/purr_key_tcf_ui"
        app:purrLabel="Show TCF UI"/>
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrFirstPartyBehavioralTargetingDirective"
        app:purrKey="@string/purr_key_first_party_targeting"
        app:purrLabel="First Party Behavioral Targeting"/>
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrAccessDeviceContactsDirective"
        app:purrKey="@string/purr_key_access_device_contacts"
        app:purrLabel="Access Device Contacts"/>
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrAllowInvitesToContactsDirective"
        app:purrKey="@string/purr_key_allow_invites_to_contacts"
        app:purrLabel="Allow Invites to Contacts"/>
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrPrefilledTextWithLinkDirective"
        app:purrKey="@string/purr_key_prefilled_text_with_link"
        app:purrLabel="Prefilled Text With Link"/>
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrTermsOfSaleBlockerUIVersionedDirective"
        app:purrKey="@string/purr_key_tos_blocker_card_ui_versioned"
        app:purrLabel="Show Terms of Sale Blocker Card UI"/>
    <com.nytimes.android.subauth.devsettings.purr.override.PurrDirectiveOverridePreference
        app:purrDirective="PurrLoadGPPDirective"
        app:purrKey="@string/purr_key_load_gpp"
        app:purrLabel="Load GPP"/>
</androidx.preference.PreferenceScreen>
