<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/fragment_podcast_sleep_timer_0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    app:layout_dodgeInsetEdges="bottom">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/gradient_podcast_bottomsheet_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="start"
            android:id="@+id/close"
            android:tag="binding_1"
            android:background="@drawable/selector_clickable_item_circular_bg"
            android:padding="18dp"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:tint="@color/ath_grey_10"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close"/>
        <TextView
            android:textColor="@color/ath_grey_10"
            android:gravity="center"
            android:id="@+id/text_title"
            android:paddingBottom="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/podcast_sleep_timer_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/close"
            style="@style/TextAppearance.Ath.Navigation"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title">
            <TextView
                android:id="@+id/text_off"
                android:tag="binding_2"
                android:text="@string/podcast_sleep_timer_turn_off"
                style="@style/Widget.Ath.Podcast.SleepTimer.Item"/>
            <TextView
                android:id="@+id/text_delay_5_minutes"
                android:tag="binding_3"
                android:text="@string/podcast_delay_5_minutes"
                style="@style/Widget.Ath.Podcast.SleepTimer.Item"/>
            <TextView
                android:id="@+id/text_delay_10_minutes"
                android:tag="binding_4"
                android:text="@string/podcast_delay_10_minutes"
                style="@style/Widget.Ath.Podcast.SleepTimer.Item"/>
            <TextView
                android:id="@+id/text_delay_15_minutes"
                android:tag="binding_5"
                android:text="@string/podcast_delay_15_minutes"
                style="@style/Widget.Ath.Podcast.SleepTimer.Item"/>
            <TextView
                android:id="@+id/text_delay_30_minutes"
                android:tag="binding_6"
                android:text="@string/podcast_delay_30_minutes"
                style="@style/Widget.Ath.Podcast.SleepTimer.Item"/>
            <TextView
                android:id="@+id/text_delay_45_minutes"
                android:tag="binding_7"
                android:text="@string/podcast_delay_45_minutes"
                style="@style/Widget.Ath.Podcast.SleepTimer.Item"/>
            <TextView
                android:id="@+id/text_delay_60_minutes"
                android:tag="binding_8"
                android:text="@string/podcast_delay_60_minutes"
                style="@style/Widget.Ath.Podcast.SleepTimer.Item"/>
            <TextView
                android:id="@+id/text_delay_episode_end"
                android:tag="binding_9"
                android:text="@string/podcast_delay_episode_end"
                style="@style/Widget.Ath.Podcast.SleepTimer.Item"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
