<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:tag="layout/fragment_search_0"
    android:background="@color/ath_grey_70"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/toolbar_compose_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/tabs_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/global_list_gutter_padding">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/title_box_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            app:elevation="0dp">
            <EditText
                android:textColor="@color/ath_grey_45"
                android:textColorHint="@color/ath_grey_45"
                android:id="@+id/search_edittext"
                android:tag="binding_1"
                android:background="@drawable/shape_search_bar_bg"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:hint="@string/search_bar_hint"
                android:maxLines="1"
                android:drawablePadding="8dp"
                android:layout_weight="1"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:drawableStart="@drawable/ic_search_black"
                android:paddingStart="8dp"
                android:drawableTint="@color/ath_grey_45"
                android:layout_marginHorizontal="16dp"
                style="@style/TextAppearance.Ath.Utility.Sans.Regular.Large"/>
            <TextView
                android:textColor="@color/ath_grey_30"
                android:gravity="center"
                android:id="@+id/cancel_button"
                android:tag="binding_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/search_bar_cancel"
                android:paddingEnd="16dp"
                style="@style/TextAppearance.Ath.Utility.Sans.Regular.Large"/>
        </LinearLayout>
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_group"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="24dp"
            app:selectionRequired="true"
            app:singleSelection="true">
            <com.google.android.material.button.MaterialButton
                android:textColor="@color/search_tab_text_color"
                android:id="@+id/articles_button"
                android:tag="binding_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_tab_articles"
                android:layout_weight="1"
                android:backgroundTint="@color/search_tab_background_color"
                style="@style/Widget.Ath.Button.ToggleItem"/>
            <com.google.android.material.button.MaterialButton
                android:textColor="@color/search_tab_text_color"
                android:id="@+id/teams_button"
                android:tag="binding_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_tab_teams"
                android:layout_weight="1"
                android:backgroundTint="@color/search_tab_background_color"
                style="@style/Widget.Ath.Button.ToggleItem"/>
            <com.google.android.material.button.MaterialButton
                android:textColor="@color/search_tab_text_color"
                android:id="@+id/leagues_button"
                android:tag="binding_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_tab_leagues"
                android:layout_weight="1"
                android:backgroundTint="@color/search_tab_background_color"
                style="@style/Widget.Ath.Button.ToggleItem"/>
            <com.google.android.material.button.MaterialButton
                android:textColor="@color/search_tab_text_color"
                android:id="@+id/authors_button"
                android:tag="binding_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_tab_authors"
                android:layout_weight="1"
                android:backgroundTint="@color/search_tab_background_color"
                style="@style/Widget.Ath.Button.ToggleItem"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/global_list_gutter_padding">
        <com.theathletic.search.ui.SearchStatefulLayout
            android:tag="binding_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:searchAuthorEmptyLayout="@layout/placeholder_search_author_empty"
            app:searchLeagueEmptyLayout="@layout/placeholder_search_league_empty"
            app:searchNotFoundLayout="@layout/placeholder_search_not_found"
            app:searchOfflineLayout="@layout/placeholder_offline_compact"
            app:searchProgressLayout="@layout/placeholder_progress"
            app:searchTeamEmptyLayout="@layout/placeholder_search_team_empty">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:tag="binding_8"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"/>
        </com.theathletic.search.ui.SearchStatefulLayout>
        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/composeView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>
</LinearLayout>
