<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/list_item_profile_day_night_toggle_0"
    android:background="@color/ath_grey_70"
    android:layout_width="match_parent"
    android:layout_height="78dp">
    <TextView
        android:id="@+id/title"
        android:tag="binding_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toggle_button_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextAppearance.Ath.Navigation"/>
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_button_group"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:selectionRequired="true"
        app:singleSelection="true">
        <com.google.android.material.button.MaterialButton
            android:textAppearance="@style/TextAppearance.Ath.Utility.Sans.Medium.Small"
            android:id="@+id/light_button"
            android:tag="binding_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_daynight_light"
            style="@style/Widget.Ath.Button.ToggleItem"/>
        <com.google.android.material.button.MaterialButton
            android:textAppearance="@style/TextAppearance.Ath.Utility.Sans.Medium.Small"
            android:id="@+id/dark_button"
            android:tag="binding_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_daynight_dark"
            style="@style/Widget.Ath.Button.ToggleItem"/>
        <com.google.android.material.button.MaterialButton
            android:textAppearance="@style/TextAppearance.Ath.Utility.Sans.Medium.Small"
            android:id="@+id/system_button"
            android:tag="binding_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_daynight_system"
            style="@style/Widget.Ath.Button.ToggleItem"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>
    <View
        android:id="@+id/view"
        android:background="@color/ath_grey_60"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
